# jupyter-datascience-notebook

./: .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  config.env  create-image-registry-auth-file.sh  run.env
.github/workflows/: build-and-push-image.yml
eduhelx-chip690/: Dockerfile  Makefile  config.env  pyproject.toml  run.env
eduhelx-chip690-295/: Dockerfile  config.env  pyproject.toml
eduhelx-data715-970/: Dockerfile  config.env  pyproject.toml
eduhelx-data715-973a-and-b/: config.env  pyproject.toml
eduhelx-data720/: Dockerfile  Makefile  config.env  pyproject.toml
eduhelx-data720-973/: Makefile  config.env  pyproject.toml
jupyter-lab-professor/: Dockerfile  Makefile  config.env  pyproject.toml
jupyter-lab-professor/scripts/: __init__.py  api.py  change_assignment_deadline.py  import_class_roster.py  stage_assignments.py  sync_script.py
jupyter-lab-student/: Dockerfile  config.env
minimal-poetry-notebook/: Dockerfile  Makefile  config.env
minimal-poetry-notebook/root/: init.sh
minimal-poetry-notebook/root/helx-startup/: 10-user.sh
ordr-d/: Dockerfile  config.env  pyproject.toml
ordr-d/root/: init.sh
root/: init.sh
root/helx/: 10-user.sh
