[tool.poetry]
name = "eduhelx-data720"
version = "0.1.0"
description = ""
authors = ["Hoid <tylerlcheek@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.1"
pandas = "^2.1.2"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
pip = "^23.3.1"
setuptools = "^65.5.1"
pgadmin4 = "8.4"
otter-grader = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
