[tool.poetry]
name = "eduhelx-data720"
version = "0.1.0"
description = ""
authors = ["Hoid <tylerlcheek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.1"
pandas = "^2.1.2"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
tensorflow-cpu = "^2.14.0"
torch = "^2.1.0"
pip = "^23.3.1"
setuptools = "^65.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
