[tool.poetry]
name = "jupyter-lab-prof"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
python-otter = "^0.1.0"
otter-grader = "^4.2.0"
ipython = "^8.10.0"
ipywidgets = "^8.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
