[tool.poetry]
name = "jupyter-lab-prof"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pip = "^23.3.1"
setuptools = "^65.5.1"
pgadmin4 = "^8.14"
python-otter = "^0.1.0"
otter-grader = "^4.2.0"
ipython = "^8.10.0"
ipywidgets = "^8.0.3"
tensorflow = "^2.18.0"
scipy = "^1.14.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"
torch = "^2.5.1"
plotly = "^5.24.1"
xgboost = "^2.1.3"
keras = "^3.7.0"
sqlalchemy = "^2.0.36"
mlxtend = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
