[tool.poetry]
name = "ordr-d"
version = "0.1.0"
description = ""
authors = ["Tyler Cheek <tylerlcheek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
psycopg = "^3.2.2"
pyodbc = "^5.1.0"
pyperformance = "^1.11.0"
numpy = "^2.1.1"
tableone = "^0.9.1"
xgboost = "^2.1.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
seaborn = "^0.13.2"
SQLAlchemy = "^2.0.35"
statsmodels = "^0.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
